--- a/Unet_Model_Scripts/ReadMe
+++ b/Unet_Model_Scripts/ReadMe
@@ -7,3 +7,4 @@
 7. Create two empty folders in the same path with names - "image_processed" and "results"
 8. Extract the "image.zip" file. Keep the folder name as "image", DO NOT change it. (This file could not be uploaded into github because of the huge size, hence sharing the drive link here
     Please copy this file from the drive and place it in this path -  "Unet_Model_Scripts/test", drive link - https://drive.google.com/open?id=1tgi2P07MooG26f3J7ig4vzOe9eyRG1Ku ). 
+9. Run the file - main.py.
